feat: up graalvm version to 22.3.1