@@ -82,7 +82,7 @@
     <maven.compiler.target>11</maven.compiler.target>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <graalvm.version>22.1.0</graalvm.version>
+    <graalvm.version>22.3.1</graalvm.version>
     <native.image.path>native-image</native.image.path>
     <native.image.name>libDxFeedGraalNativeApi</native.image.name>
     <set-rpath.skip>true</set-rpath.skip>
@@ -155,10 +155,13 @@
                 <buildArg>--enable-url-protocols=http,https</buildArg>
                 <buildArg>-H:+SharedLibrary</buildArg>
                 <buildArg>-H:Name=${native.image.name}</buildArg>
+                <buildArg>-Dproject.path=${project.basedir}</buildArg>
                 <buildArg>-H:CLibraryPath=${project.basedir}/</buildArg>
                 <buildArg>-H:Path=${native.image.path}</buildArg>
                 <buildArg>-H:ConfigurationFileDirectories=${project.basedir}/META-INF/native-image/</buildArg>
-                <buildArg>--initialize-at-build-time=sun.instrument.InstrumentationImpl</buildArg>
+                <buildArg>--add-exports=org.graalvm.nativeimage.builder/com.oracle.svm.core=ALL-UNNAMED</buildArg>
+                <buildArg>--add-exports=org.graalvm.nativeimage.builder/com.oracle.svm.core.jni=ALL-UNNAMED</buildArg>
+                <buildArg>--initialize-at-build-time=sun.instrument.InstrumentationImpl,com.dxfeed.event.market.Scope,com.dxfeed.model.market.OrderBookModelFilter</buildArg>
 
 
                 <buildArg>--native-image-info</buildArg>
@@ -200,6 +203,7 @@
         <configuration>
           <skip>false</skip>
           <imageName>${native.image.name}</imageName>
+<!--          <mainClass>com.dxfeed.Receiver</mainClass>-->
           <buildArgs>
             <!-- NativeImage options links: -->
             <!-- 1. https://www.graalvm.org/22.1/reference-manual/native-image/Options/ -->
@@ -212,7 +216,13 @@
             <buildArg>-H:CLibraryPath=${project.basedir}/</buildArg>
             <buildArg>-H:Path=${native.image.path}</buildArg>
             <buildArg>-H:ConfigurationFileDirectories=${project.basedir}/META-INF/native-image/</buildArg>
-            <buildArg>--initialize-at-build-time=sun.instrument.InstrumentationImpl</buildArg>
+            <buildArg>--add-exports=org.graalvm.nativeimage.builder/com.oracle.svm.core=ALL-UNNAMED</buildArg>
+            <buildArg>--add-exports=org.graalvm.nativeimage.builder/com.oracle.svm.core.jni=ALL-UNNAMED</buildArg>
+            <buildArg>--initialize-at-build-time=sun.instrument.InstrumentationImpl,com.dxfeed.event.market.Scope,com.dxfeed.model.market.OrderBookModelFilter</buildArg>
+<!--            <buildArg>&#45;&#45;pgo-instrument</buildArg>-->
+<!--            -XX:ProfilesDumpFile=default.iprof-->
+<!--            <buildArg>&#45;&#45;pgo=${project.basedir}/default.iprof</buildArg>-->
+<!--            <buildArg>&#45;&#45;gc=G1</buildArg>-->
           </buildArgs>
         </configuration>
       </plugin>
